# universal-mcp-servers

./: .gitignore  LICENSE  README.md  deploy-mcp-configs.sh  mcp-config-generator.py  mcp-portable-config.json  package.json  universal-mcp-installer.sh
.github/: pull_request_template.md
configs/: copilot-cli-mcp-config.json  gemini-cli-mcp-config.yaml
src/: index.js
src/ai-mcp-platform/: README.md  chat_copilot_integration.py  main.py  mcp-server-advanced.py  mcp-server-config.md  mcp-server-gateway.py  mcp-servers-secure.json  mcp_gateway_server.py  mcp_server.py  pyproject.toml
src/aiautodash-mcp/: README.md  mcp_server.py  pyproject.toml
src/audio-processing/: index.js
src/data-validation/: index.js
src/device-automation-platform/: server.py
src/everything/: CLAUDE.md  README.md  instructions.md  package-lock.json
src/fetch/: README.md  index.js  package-lock.json  package.json
src/file-compression/: index.js
src/filesystem/: README.md  index.js  package-lock.json
src/fortimanager/: .env.example  README.md  pyproject.toml  server.py
src/fortinet/: .env.example  README.md  pyproject.toml  server.py
src/gdrive/: index.js  package-lock.json  package.json
src/git/: README.md
src/google-drive/: index.js
src/image-processing/: index.js
src/memory/: README.md  package-lock.json  package.json
src/meraki/: .env.example  README.md  pyproject.toml  server.py
src/network/: README.md  fortigate_server.py  llms-full.txt
src/openai/: index.js  index.ts
src/pdf-processing/: index.js  (+2 more)
tools/: mcp_memory_integration.py  progress_tracker.py
(+12 files in other folders)
