[project]
name = "aiautodash-mcp"
version = "0.1.0"
description = "MCP server for AIAutoDash agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
aiautodash-mcp = "mcp_server:main"
